# roommate

./: .gitattributes  .gitignore  LICENSE.md  README.md  example_config.yaml  hacs.json  pyproject.toml
.github/workflows/: release.yml  validate.yml
custom_components/roommate/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  diagnostics.py  manager.py  manifest.json  number.py  room.py  schema.py  sensor.py  strings.json  switch.py
custom_components/roommate/translations/: en.json
tests/: conftest.py  test_config_flow.py  test_diagnostics.py  test_init.py  test_manager.py  test_sensor.py
